--- a/apps/happin-web/styles/components.scss
+++ b/apps/happin-web/styles/components.scss
@@ -76,14 +76,12 @@ button {
 }
 
 .btn-outline-light {
-  @apply bg-transparent text-gray-900 border-gray-600;
-  color: #fff;
+  @apply bg-transparent border-gray-600 text-white;
   &:hover {
-    //@apply border-gray-500;
-    background-color: rgba(#fff, .5);
+    background-color: rgba(#fff, .2);
   }
   &:active {
-    background-color: rgba(#fff, .4);
+    background-color: rgba(#fff, .3);
   }
 }
 
