--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -492,9 +492,15 @@
 }
 
 // Event Set
+.create-event-collection__container {
+  @apply w-full px-4 sm:px-8 mx-auto lg:m-0;
+}
+
 .event-set__follow {
   @apply py-2 ml-3 text-sm inline-flex items-center justify-center font-semibold rounded-full;
   @media (min-width: 640px) {
     @apply py-3 text-base px-6
   }
 }
+
+
