--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -140,7 +140,60 @@
     transform: translate(-50%, -50%);
   }
 }
+// Topup
+.topup_continue_button {
+  background-color: #fe4365;
+  border: 1px solid rgb(0,0,0);
+  border-radius: 2rem;
+  box-sizing: border-box;
+  color: #ffffff;
+  font-family: "Inter var",ui-sans-serif,system-ui,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+  font-size: .875rem;
+  font-weight: 600;
+  line-height: 1.25rem;
+  padding: .75rem 1rem;
+  text-align: center;
+  text-decoration: none #D1D5DB solid;
+  text-decoration-thickness: auto;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
 
+.topup_continue_button:hover {
+  background-color: #db1d40;
+}
+
+.topup_continue_button:focus {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.topup_continue_button:focus-visible {
+  box-shadow: none;
+}
+
+.topup_enter-input {
+  @apply block w-60 pl-10 pr-2 py-2 rounded-full border-2 border-solid border-gray-800 bg-black text-white transition placeholder-gray-400;
+  &:hover {
+    @apply border-gray-600
+  }
+  &:focus {
+    @apply bg-gray-900
+  }
+}
+
+.topup_username-input {
+  @apply block w-80 pl-10 pr-2 py-2 rounded-full border-2 border-solid border-gray-800 bg-black text-white transition placeholder-gray-400;
+  &:hover {
+    @apply border-gray-600
+  }
+  &:focus {
+    @apply bg-gray-900
+  }
+}
 // Check out
 .checkout__page {
   @apply relative flex-1 h-0 text-white overflow-x-hidden z-0;
