--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -151,6 +151,7 @@
   background-color:gray;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  border-top:1px solid #fff
 }
 
 .event-details__backdrop {
