--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -1,7 +1,7 @@
 @import 'mixin';
 // Header
 .header__link {
-  @apply hidden sm:inline-flex text-sm p-1 font-medium text-gray-300 hover:text-white transition whitespace-nowrap
+  @apply hidden sm:inline-flex text-sm p-1 font-medium text-gray-300 hover:text-gray-50 transition whitespace-nowrap
 }
 .header__menu {
   @apply flex items-center rounded-full border-2 border-solid border-gray-800 text-gray-500 py-1 pr-1 pl-3 cursor-pointer transition;
@@ -10,10 +10,10 @@
   }
 }
 .header__menu-dropdown {
-  @apply absolute z-50 w-52 mt-2 px-2 bg-gray-900 rounded-lg focus:outline-none;
+  @apply absolute z-50 w-52 mt-2 px-2 bg-gray-800 rounded-lg focus:outline-none;
 }
 .header__menu-link {
-  @apply text-white flex rounded-md items-center w-full px-2 py-2 my-1 text-sm transition font-medium;
+  @apply text-gray-50 flex rounded-md items-center w-full px-2 py-2 my-1 text-sm transition font-medium;
   &:hover {
     @apply bg-gray-700
   }
@@ -26,7 +26,7 @@
   }
 }
 .header__search-input {
-  @apply block w-full pl-10 pr-3 py-2 rounded-full border-2 border-solid border-gray-800 bg-transparent text-white transition placeholder-gray-400;
+  @apply block w-full pl-10 pr-3 py-2 rounded-full border-2 border-solid border-gray-800 bg-transparent text-gray-50 transition placeholder-gray-400;
   &:hover {
     @apply border-gray-700
   }
@@ -35,7 +35,7 @@
   }
 }
 .header__phone-search {
-  @apply block w-full px-3 py-3 border-0 bg-gray-900 text-white transition placeholder-gray-400;
+  @apply block w-full px-3 py-3 border-0 bg-gray-900 text-gray-50 transition placeholder-gray-400;
 }
 .fade-enter {
   transition: all .1s cubic-bezier(0, 0, 0.2, 1);
@@ -81,7 +81,7 @@
 
 // Event Details
 .event-details__page{
-  @apply relative flex-1 h-0 text-white z-0;
+  @apply relative flex-1 h-0 text-gray-50 z-0;
 }
 .event-details__container {
   @apply w-full px-4 sm:px-8 md:px-10 lg:px-14 mx-auto lg:m-0;
@@ -94,15 +94,15 @@
 .event-details__tab {
   @apply flex items-center justify-center flex-1 rounded-full h-8 sm:h-10 cursor-pointer font-medium text-gray-400 transition text-sm md:text-base;
   &:hover {
-    @apply text-white;
+    @apply text-gray-50;
   }
   &.active, &.first-active {
-    @apply bg-gray-700 text-white;
+    @apply bg-gray-700 text-gray-50;
   }
 }
 .event-details__side-action {
   @apply flex items-center justify-center w-10 h-10 sm:w-12 sm:h-12 text-xl rounded-full border-2 border-solid border-gray-600 text-gray-400 cursor-pointer transition;
-  background-color: rgba(#000, .7);
+  background-color: rgba(#121212, .7);
   &:hover {
     @apply text-gray-200 bg-gray-900
   }
@@ -178,7 +178,7 @@
 
 // Check out
 .checkout__page {
-  @apply relative flex-1 h-0 text-white overflow-x-hidden z-0;
+  @apply relative flex-1 h-0 text-gray-50 overflow-x-hidden z-0;
 }
 .checkout__container {
   max-width: 600px;
@@ -200,7 +200,7 @@
     @apply text-gray-300;
   }
   &.active {
-    @apply text-white;
+    @apply text-gray-50;
     &:after {
       @apply h-px;
     }
@@ -222,7 +222,7 @@
   }
 }
 .checkout__ticket-select {
-  @apply w-24 sm:w-36 py-1 sm:py-2 text-sm sm:text-base border-2 border-solid border-gray-600 bg-transparent text-white;
+  @apply w-24 sm:w-36 py-1 sm:py-2 text-sm sm:text-base border-2 border-solid border-gray-600 bg-transparent text-gray-50;
   &:hover {
     @apply border-gray-500 bg-gray-900;
   }
@@ -234,7 +234,7 @@
   }
 }
 .checkout__merch-select {
-  @apply w-full py-0 h-8 text-sm border border-solid border-gray-500 bg-transparent text-white;
+  @apply w-full py-0 h-8 text-sm border border-solid border-gray-500 bg-transparent text-gray-50;
   &:hover {
     @apply border-gray-400 bg-gray-700;
   }
@@ -278,7 +278,7 @@
 }
 
 .badge-count {
-  @apply absolute right-1 top-1 origin-top-right rounded-full text-white bg-rose-500 h-5 text-center px-1.5 text-sm;
+  @apply absolute right-1 top-1 origin-top-right rounded-full text-gray-50 bg-rose-500 h-5 text-center px-1.5 text-sm;
   min-width: 20px;
   transform: translate(50%, -50%);
 }
@@ -355,7 +355,7 @@
     @apply text-gray-300;
   }
   &.active {
-    @apply text-white;
+    @apply text-gray-50;
     &:after {
       @apply h-px;
     }
@@ -365,7 +365,7 @@
   @apply flex items-center justify-center w-8 h-8 text-lg rounded-full bg-black bg-opacity-30 text-gray-400 cursor-pointer transition;
   background-color: rgba(#000, .7);
   &:hover {
-    @apply text-white bg-rose-500
+    @apply text-gray-50 bg-rose-500
   }
 }
 
@@ -497,7 +497,7 @@
   }
 }
 
-// event submit 
+// event submit
 .event-submit__container {
   @apply w-full px-4 sm:px-8 mx-auto lg:m-0;
   //padding-right: 4.5rem;
@@ -553,7 +553,7 @@
   }
 }
 .news__search-input {
-  @apply block w-full pl-14 pr-4 py-3 lg:py-4 rounded-full border-2 border-solid border-transparent bg-black text-white transition placeholder-gray-400 bg-opacity-60;
+  @apply block w-full pl-14 pr-4 py-3 lg:py-4 rounded-full border-2 border-solid border-transparent bg-black text-gray-50 transition placeholder-gray-400 bg-opacity-60;
   &:hover {
     @apply bg-opacity-80
   }
