--- a/apps/happin-web/styles/components.scss
+++ b/apps/happin-web/styles/components.scss
@@ -219,7 +219,7 @@ button {
 .number-input {
   @apply relative w-36;
   input {
-    @apply block w-full px-9 py-2 border-2 border-solid border-gray-600 rounded-lg bg-transparent text-white text-center transition placeholder-gray-400;
+    @apply block w-full px-9 py-2 border-2 border-solid border-gray-600 rounded-lg bg-transparent text-gray-50 text-center transition placeholder-gray-400;
     &:focus {
       @apply bg-gray-900
     }
@@ -270,7 +270,7 @@ button {
 
 // Select
 .select-button {
-  @apply relative w-full py-1 pl-3 pr-10 text-left border-2 border-solid border-gray-600 rounded-lg bg-transparent text-white transition placeholder-gray-400 hover:border-gray-500 focus:bg-gray-900 focus:outline-none;
+  @apply relative w-full py-1 pl-3 pr-10 text-left border-2 border-solid border-gray-600 rounded-lg bg-transparent text-gray-50 transition placeholder-gray-400 hover:border-gray-500 focus:bg-gray-900 focus:outline-none;
   &:disabled {
     @apply border-gray-700 text-gray-500
   }
@@ -298,7 +298,7 @@ button {
   @apply text-gray-300 text-sm
 }
 .form-field {
-  @apply block w-full py-2 px-3 mt-1 bg-transparent text-white border-2 border-solid border-gray-600 rounded-lg transition placeholder-gray-500 focus:bg-gray-900 hover:border-gray-500 focus:outline-none;
+  @apply block w-full py-2 px-3 mt-1 bg-transparent text-gray-50 border-2 border-solid border-gray-600 rounded-lg transition placeholder-gray-500 focus:bg-gray-900 hover:border-gray-500 focus:outline-none;
   &.is-placeholder {
     @apply text-gray-400
   }
