--- a/apps/box-office/styles/globals.scss
+++ b/apps/box-office/styles/globals.scss
@@ -7,6 +7,7 @@
 @import "styles/reset";
 @import "styles/public";
 
+@import "styles/components";
 @import "styles/plugins";
 @import "styles/pages";
 
