--- a/apps/box-office/styles/components.scss
+++ b/apps/box-office/styles/components.scss
@@ -203,6 +203,18 @@ button {
     @apply bg-gray-100 text-gray-300;
   }
 }
+.btn-dark-light {
+  @apply bg-gray-700 text-gray-200;
+  &:hover {
+    @apply bg-gray-600
+  }
+  &:active {
+    @apply bg-gray-500
+  }
+  &.disabled, &:disabled {
+    @apply bg-gray-700 text-gray-400;
+  }
+}
 
 // Select counter
 .number-input {
