--- a/apps/box-office/styles/pages.scss
+++ b/apps/box-office/styles/pages.scss
@@ -337,3 +337,51 @@
     @apply bg-gray-200 text-gray-400 shadow-none justify-center;
   }
 }
+
+// APP Reward
+.app-reward__page {
+  @apply overflow-y-auto;
+}
+.app-reward__exchange {
+  position: absolute;
+  top: 24px;
+  left: 0;
+  margin-left: -10px;
+  z-index: 1;
+}
+.app-reward__tab {
+  @apply relative py-2 font-semibold text-lg text-gray-400;
+  &.active {
+    @apply text-gray-50;
+    &:after {
+      content: '';
+      @apply absolute left-0 right-0 bottom-0 h-1 rounded-full bg-rose-500;
+    }
+  }
+}
+.app-reward__day-item {
+  @apply flex-1 relative;
+  &.checked:not(:first-child):before {
+    content: '';
+    @apply absolute -left-1/2 w-full border-t-4 border-dotted border-gray-400;
+    top: 10px;
+  }
+}
+.app-reward__day {
+  @apply relative flex items-center justify-center w-6 h-6 mx-auto mb-1 font-semibold rounded-full text-white z-10;
+}
+.app-reward__day-text {
+  @apply text-gray-400 text-sm font-medium
+}
+.checked {
+  .app-reward__day {
+    @apply bg-rose-500;
+  }
+  .app-reward__day-text {
+    @apply text-rose-500
+  }
+}
+.app-reward__earn-icon {
+  @apply flex items-center justify-center w-11 h-11 rounded-full text-white;
+  background: linear-gradient(140.91deg, #ff5b33 8.41%, #853389 100%);
+}
