--- a/apps/box-office/styles/public.scss
+++ b/apps/box-office/styles/public.scss
@@ -37,6 +37,9 @@
   &.reward-page {
     background-color: #ffb15d;
   }
+  &.app-reward-page {
+    @apply bg-gray-900
+  }
 }
 .header {
   .home-page &{
