remove app/reward to 3001

--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -34,6 +34,12 @@
   &.home-page {
     @apply h-auto
   }
+  &.reward-page {
+    background-color: #ffb15d;
+  }
+  &.app-reward-page {
+    @apply bg-gray-900
+  }
 }
 .header {
   .home-page &{
