add events page, modify home page

--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -408,6 +408,31 @@
     right: -550px;
   }
 }
+.events-right-circle {
+  width: 360px;
+  height: 360px;
+  right: -260px;
+  @media (min-width: 640px) {
+    width: 360px;
+    height: 360px;
+    right: -240px;
+  }
+  @media (min-width: 768px) {
+    width: 450px;
+    height: 450px;
+    right: -260px;
+  }
+  @media (min-width: 1024px) {
+    width: 600px;
+    height: 600px;
+    right: -380px;
+  }
+  @media (min-width: 1280px) {
+    width: 750px;
+    height: 750px;
+    right: -450px;
+  }
+}
 .home__color-purple {
   background-color: #5956E9;
 }
