--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -31,7 +31,7 @@
 // Layout
 .main-app {
   @apply flex flex-col h-screen;
-  &.home-page {
+  &.production {
     @apply h-auto
   }
   &.reward-page {
@@ -42,7 +42,7 @@
   }
 }
 .header {
-  .home-page &{
+  .production &{
     @apply sticky top-0 z-10;
   }
 }
