--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -640,6 +640,23 @@
     @apply bg-gray-200 text-gray-400 shadow-none justify-center;
   }
 }
+@keyframes progress-bar-stripes {
+  0% {
+    background-position-x: 1rem;
+  }
+}
+.reward__progress {
+  @apply flex overflow-hidden rounded-full bg-white bg-opacity-20 h-3
+}
+
+.reward__progress-bar {
+  @apply flex flex-col justify-center overflow-hidden text-white text-center whitespace-nowrap font-semibold text-sm;
+  background-color: #fcbb00;
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-size: 1rem 1rem;
+  transition: width 0.6s ease;
+  animation: 1s linear infinite progress-bar-stripes;
+}
 
 // APP Reward
 .app-reward__page {
