--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -705,3 +705,41 @@
   @apply flex items-center justify-center w-11 h-11 rounded-full text-white;
   background: linear-gradient(140.91deg, #ff5b33 8.41%, #853389 100%);
 }
+
+// Campaign
+.campaign__tab-item {
+  @apply flex-shrink-0 flex justify-center items-center text-center border border-b-0 border-solid border-yellow-900 rounded-t-3xl px-4 h-12 w-32 bg-yellow-500 leading-4 font-bold;
+  & + .campaign__tab-item {
+    @apply -ml-px
+  }
+  &.active {
+    @apply bg-gray-900 border-gray-900 text-rose-500;
+  }
+}
+.campaign__day-item {
+  @apply flex-1 relative;
+  &:not(:first-child):before {
+    content: '';
+    @apply absolute -left-1/2 w-full border-t-2 border-solid border-rose-500;
+    top: 4px;
+  }
+}
+.campaign__day-last {
+  @apply absolute -right-1.5 w-5 h-5 rounded-full flex items-center justify-center bg-yellow-500;
+}
+.campaign__day {
+  @apply relative flex items-center w-2.5 h-2.5 mx-auto mb-2 bg-gray-100 rounded-full z-10;
+}
+.campaign__day-text {
+  @apply text-gray-400 text-sm font-medium
+}
+.campaign__search-input {
+  @apply block w-full pl-10 pr-3 py-2 rounded-full border-2 border-solid border-gray-700 bg-gray-700 text-gray-50 transition placeholder-gray-500;
+  &:focus {
+    @apply border-gray-500
+  }
+}
+.campaign__top-three {
+  background: url("../public/images/top-three-bg.png") no-repeat center bottom;
+  background-size: 100%;
+}
