--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -77,6 +77,9 @@
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
 }
+.border-3 {
+  border-width: 3px;
+}
 
 .divider-words {
   @apply relative font-semibold leading-none text-center my-5 text-sm sm:text-base;
