--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -669,6 +669,15 @@
   }
 }
 
+// Transaction History page
+.avator-icon {
+  background-color:rgba(0, 0, 0, 0.5);
+  border-top-left-radius: 50% 50%;
+  border-top-right-radius: 50% 50%;
+  border-bottom-right-radius: 50% 50%;
+  border-bottom-left-radius: 50% 50%;
+}
+
 // APP Reward
 .app-reward__page {
   @apply overflow-y-auto;
