appreward claim button update

--- a/apps/happin-web/styles/components.scss
+++ b/apps/happin-web/styles/components.scss
@@ -94,6 +94,10 @@ button {
   &:active {
     background-color: rgba($rose, .4);
   }
+  &:disabled {
+    --tw-bg-opacity: 1;
+    opacity: 0.3;
+  }
 }
 
 .btn-outline-blue {
