Revert "Merge branch 'master' into livestream"
This reverts commit be5cd103c161410cb06ca70809cb1c52cacd0f40, reversing
changes made to 3f66788dfab12a29e940508b6ac9b245f252ebdc.

--- a/apps/happin-web/styles/public.scss
+++ b/apps/happin-web/styles/public.scss
@@ -31,7 +31,7 @@
 // Layout
 .main-app {
   @apply flex flex-col h-screen;
-  &.production {
+  &.home-page {
     @apply h-auto
   }
   &.reward-page {
@@ -42,7 +42,7 @@
   }
 }
 .header {
-  .production &{
+  .home-page &{
     @apply sticky top-0 z-10;
   }
 }
@@ -76,9 +76,6 @@
 }
 .hide-scrollbar::-webkit-scrollbar {
   display: none;
-}
-.border-3 {
-  border-width: 3px;
 }
 
 .divider-words {
