--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -124,6 +124,13 @@
   max-height: calc(100% - 80px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, .75);
 }
+
+.event-details__modal2 {
+  @apply flex flex-col w-full pt-3  sm:pt-4 px-4 sm:px-5 ml-10 mr-10 rounded-lg border border-solid border-gray-700 bg-gray-800;
+  max-width: 500px;
+  max-height: calc(100% - 80px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .75);
+}
 .event-details__description-modal {
   @apply relative inline-flex flex-col w-full h-full max-w-2xl sm:my-8 overflow-hidden text-left align-middle bg-white rounded-xl sm:rounded-xl md:rounded-2xl z-10;
   max-height: calc(100vh - 1rem);
@@ -2873,6 +2880,15 @@
     width: 450px !important;
     margin: auto;
   }
+}
+
+.popup-avatar {
+  width:45px;
+  margin:auto;
+  border-top-left-radius: 50% 50%;
+  border-top-right-radius: 50% 50%;
+  border-bottom-right-radius: 50% 50%;
+  border-bottom-left-radius: 50% 50%;
 }
 
 .invite-user__event-detail {
