--- a/apps/happin-web/styles/pages.scss
+++ b/apps/happin-web/styles/pages.scss
@@ -2906,8 +2906,21 @@
     .video-section {
       height: calc(100% - 167px);
     }
+
+    #id_test_video {
+      height: 80% !important;
+    }
   }
 
+  #id_test_video {
+    width: 100%;
+    height: 100%;
+  }
+
+  #video-tip {
+    position:absolute;
+    z-index:2;
+  }
   
 
 //   #loop_pre_recorded {
